--- a/lodspeakr/components/types/viz:ChartVisualization/html.template
+++ b/lodspeakr/components/types/viz:ChartVisualization/html.template
@@ -51,6 +51,7 @@
 <script src='{{lodspk.home}}js/jquery.flot.axislabels.js'></script> 
 <script src="{{lodspk.home}}js/editor.js"></script>
 <script>
+var datasetEditors = new Array();
 $(function(){
 var config = {
       chartType: "{{first.main.vizType.curie|explode:":"|pop}}",
@@ -129,7 +130,6 @@ function getData(url){
               }
             }
           }
-          console.log(groupedData);
 
           var counter = 0;
           var auxData = [];
@@ -146,15 +146,104 @@ function getData(url){
             var item = groupedData[i];
             newItem["id"] = "id_"+counter;
             newItem[groupby] = i;
-            console.log(item);
             $.each(item, function(i, v){
               newItem[i]=v;
             });
             auxData.push(newItem);
             counter++;
           }
-          console.log(auxData);
           data.rows = auxData;
+        }else if(d.merge !=undefined){
+   ////////BEGIN MERGE
+   console.log(d);
+          var datasets = new Array();
+          var title = ["b.csv".replace(".", "_"), "a.csv".replace(".", "_")];
+
+          for(var i in d.merge){
+            getData(d.merge[i].dataset);
+            var newHeaderColumns = new Array(), newColumns = new Array();
+            for(var k in newData.header){
+              var aux = {name: title[i]+"_"+newData.header[k].name, value: title[i]+"_"+newData.header[k].value};
+              newHeaderColumns.push(aux);
+              aux = {id: title[i]+"_"+newData.header[k].name, name: title[i]+"_"+newData.header[k].name, field: title[i]+"_"+newData.header[k].name, cssClass: "cell-title", sortable: true };
+              newColumns.push(aux);
+            }
+            var newConfig = {
+              columns: newColumns,
+              headerColumns: newHeaderColumns,
+              searchField: "",
+              title: "Merge dataset ("+title[0]+" and "+title[1]+")",
+              editorId: datasetEditors.length,
+              data: newData.rows
+            };
+            var j = datasetEditors.length;
+            datasetEditors[j] = new Editor;
+            datasetEditors[j].init(newConfig);
+            datasetEditors[j].setData(newData.rows);
+          }
+
+          var id1 = 0,
+              id2 = 1,
+              var1 = d.merge[0].field,
+              var2 = d.merge[1].field;
+
+          var newHeaderColumns = [], newColumns = [];
+          var hc1 = datasetEditors[id1].headerColumns,
+              hc2 = datasetEditors[id2].headerColumns,
+              c1 = datasetEditors[id1].columns,
+              c2 = datasetEditors[id2].columns;
+          //New headerColumns
+          for(var k in hc1){
+            var aux = {name: title[0]+"_"+hc1[k].name, value: title[0]+"_"+hc1[k].value};
+            newHeaderColumns.push(aux);
+          }
+          for(var k in hc2){
+            var aux = {name: title[1]+"_"+hc2[k].name, value: title[1]+"_"+hc2[k].value};
+            newHeaderColumns.push(aux);
+          }
+
+          //New columns
+          var newHeader = new Array();
+          for(var k in c1){
+            var aux = {id: title[0]+"_"+c1[k].id, name: title[0]+"_"+c1[k].name, field: title[0]+"_"+c1[k].field, cssClass: "cell-title", sortable: true };
+            newColumns.push(aux);
+            newHeader.push(c1[k].name);
+          }
+          for(var k in c2){
+            var aux = {id: title[1]+"_"+c2[k].id, name: title[1]+"_"+c2[k].name, field: title[1]+"_"+c2[k].field, cssClass: "cell-title", sortable: true };
+            newColumns.push(aux);
+            newHeader.push(c2[k].name);
+          }
+          datasetEditors[id1].obtainSelection();
+          datasetEditors[id2].obtainSelection();
+          var matchCounter = 0;
+          var newRows = [];
+          $.each(datasetEditors[id1].dataSelection.rows, function(i, item1){
+            $.each(datasetEditors[id2].dataSelection.rows, function(j, item2){
+              if(item1[var1] == item2[var2]){
+                var newItem = {id: matchCounter++};
+                for(var k in item1){
+                  if(k != "id"){
+                    newItem[title[0]+"_"+k] = item1[k];
+                  }
+                }
+                for(var k in item2){
+                  if(k != "id"){
+                    newItem[title[1]+"_"+k] = item2[k];
+                  }
+                }
+                newRows.push(newItem);
+              }    
+            });
+          });
+          newData = {header: newHeader, rows: newRows};
+          console.log("------------");
+          console.log(newData);
+          return;
+/////////////////END MERGE
+        }else{
+          alert("something is wrong");
+          return;
         }
       }//end else
       newData = data;
@@ -163,7 +252,12 @@ function getData(url){
 }
 
 data = getData("{{first.params.dataset.value}}");
-var e = new Editor(config);
+//datasetEditors.push(new Editor(config));
+var j = datasetEditors.length;
+datasetEditors[j] = new Editor;
+datasetEditors[j].init(config);
+datasetEditors[j].setData(newData.rows);
+var e = datasetEditors[j];
 e.setData(newData.rows);
 e.renderChart(config);
 
