--- a/lodspeakr/components/types/viz:VirtualDataset/json.template
+++ b/lodspeakr/components/types/viz:VirtualDataset/json.template
@@ -1,6 +1,18 @@
 {
+{%if first.main.groupVariable.value%}
   "groupby": "{{first.main.groupVariable.value}}",
-  "dataset": "{{first.main.dataset.value}}",
+"dataset": "{{first.main.dataset.value}}",
   "operation": "{{first.main.operation.value}}",
   "variable": [{%for i in models.main%}{%if !forloop.last%},{%endif%}"{{i.variableGrouped.value}}"{%endfor%}]
+{%endif%}
+{%if first.main.datasetmerged.value%}
+"merge": [
+{%for i in models.main%}
+  {%if !forloop.last%},{%endif%}{
+    "dataset": "{{i.datasetmerged.value}}",
+    "field": "{{i.fieldmerged.value}}"
+  }
+{%endfor%}
+]
+{%endif%}
 }
