--- a/lodspeakr/components/types/viz:VirtualDataset/json.template
+++ b/lodspeakr/components/types/viz:VirtualDataset/json.template
@@ -10,7 +10,8 @@
 {%for i in models.main%}
   {%if !forloop.last%},{%endif%}{
     "dataset": "{{i.datasetmerged.value}}",
-    "field": "{{i.fieldmerged.value}}"
+    "field": "{{i.fieldmerged.value}}",
+    "filter": [{column: "{{i.filterColumn.value}}", value: "{{i.filterValue.value}}" }]
   }
 {%endfor%}
 ]
