--- a/lodspeakr/components/types/viz:MapVisualization/html.template
+++ b/lodspeakr/components/types/viz:MapVisualization/html.template
@@ -22,11 +22,13 @@
       </div>
       <div>
        <strong>Obtained from:</strong>
+       <ul>
        {%for i in models.main%}
-       <div about="{{i.original.value}}">
-       <a rel="http://www.w3.org/ns/dcat#distribution" href="{{i.original.value}}">{{i.original.value|explode:"/"|pop}}</a></div>
+       <li about="{{i.original.value}}">
+       <a rel="http://www.w3.org/ns/dcat#distribution" href="{{i.original.value}}">{{i.original.value|explode:"/"|pop}}</a> <small>(from {{i.original.value|hostname}})</small></li>
        {%endfor%}
-      </div>
+       </ul>
+       </div>
       <div>
        <strong>Downloaded at:</strong>
        <span about="{{first.main.datasetcreationdate.value}}" property="dcterms:created">{{first.main.datasetcreationdate.value}}</span>
