--- a/lodspeakr/components/types/viz:ChartVisualization/html.template
+++ b/lodspeakr/components/types/viz:ChartVisualization/html.template
@@ -1,6 +1,7 @@
 {%include "../../includes/header.inc"%}
     <div class="container-fluid">
-    <h1>{{first.main.title.value}}</h1>
+    <h1>{{first.main.title.value}} <button class="btn btn-info hidden" id="share-button" data-toggle="modal" data-target="#share-dialog">Share</button></h1>    
+
     <div id="metadata" style="float:right;" class="well" about="{{uri}}">
       <h4>Metadata</h4>
       <hr/>
@@ -35,7 +36,6 @@
       </div>
     </div>
     <div id="chartContainer" class="vizContainer"></div>
-    
     <div class="modal hide fade" id="error-dialog">
   <div class="modal-header">
     <h3>Error</h3>
@@ -49,6 +49,18 @@
 </div>
 
 </div> 
+<div class="modal hide fade" id="share-dialog">
+ <div class="modal-header">
+  <h3>Share this visualization</h3>
+ </div>
+ <div class="modal-body">
+  <pre id="embed-url">http://example.com</pre>
+  <div class="modal-footer">
+   <a href="#" class="btn" data-dismiss="modal" aria-hidden="true">Close</a>
+  </div>
+ </div>
+</div>
+
 <script src='{{lodspk.home}}js/jquery.flot.js'></script>
 <script src='{{lodspk.home}}js/jquery.flot.axislabels.js'></script> 
 <script src="{{lodspk.home}}js/editor.js"></script>
@@ -85,14 +97,21 @@ datasetEditors[j].init(config);
 datasetEditors[j].setData(newData.rows);
 datasetEditors[j].renderChart(config);
 
+
+$("#embed-url").html("&lt;div style='width:"+(config.width*1.2)+"px;height:"+(config.height*1.2)+"px'&gt;&lt;iframe style='overflow-x: hidden;overflow-y: hidden;' frameborder='0'  width='100%' height='99%' src='"+window.location+"'&gt;&lt;/iframe&gt;&lt;/div&gt;")
+
 });
 
 var isInIFrame = (window.location != window.parent.location);
 if(isInIFrame==true){
 $("#metadata").hide();
 $(".navbar").hide();
+}else{
+  $("h1").on('mouseover', function(){$("#share-button").removeClass("hidden")})
+       .on('mouseout', function(){$("#share-button").addClass("hidden")});
+$("#chartContainer").on('mouseover', function(){$("#share-button").removeClass("hidden")})
+       .on('mouseout', function(){$("#share-button").addClass("hidden")});
 }
 </script>
-
 </body>
 </html>
