--- a/lodspeakr/components/types/viz:ChartVisualization/html.template
+++ b/lodspeakr/components/types/viz:ChartVisualization/html.template
@@ -54,6 +54,10 @@
   <h3>Share this visualization</h3>
  </div>
  <div class="modal-body">
+  <h3>Embed HTML</h3>
+  <pre id="embed-iframe">http://example.com</pre>
+  <hr/>
+  <h3>Link</h3>
   <pre id="embed-url">http://example.com</pre>
   <div class="modal-footer">
    <a href="#" class="btn" data-dismiss="modal" aria-hidden="true">Close</a>
@@ -98,8 +102,8 @@ datasetEditors[j].setData(newData.rows);
 datasetEditors[j].renderChart(config);
 
 
-$("#embed-url").html("&lt;div style='width:"+(config.width*1.2)+"px;height:"+(config.height*1.2)+"px'&gt;&lt;iframe style='overflow-x: hidden;overflow-y: hidden;' frameborder='0'  width='100%' height='99%' src='"+window.location+"'&gt;&lt;/iframe&gt;&lt;/div&gt;")
-
+$("#embed-iframe").html("&lt;div style='width:"+(config.width*1.2)+"px;height:"+(config.height*1.2)+"px'&gt;&lt;iframe style='overflow-x: hidden;overflow-y: hidden;' frameborder='0'  width='100%' height='99%' src='"+window.location+"'&gt;&lt;/iframe&gt;&lt;/div&gt;");
+$("#embed-url").html(window.location+"");
 });
 
 var isInIFrame = (window.location != window.parent.location);
