uso de infinito para inicializar variables para calcular bbox

--- a/lodspeakr/components/types/viz:MapVisualization/json.template
+++ b/lodspeakr/components/types/viz:MapVisualization/json.template
@@ -6,6 +6,12 @@
             "lon": "{{first.params.paramX.value}}",
             "lat": "{{first.params.paramY.value}}"
       },
+      "filter": [ 
+                {
+                  "searchString": "{{first.params.filterValue.value}}",
+                  "searchField": "{{first.params.filterColumn.value}}"
+                }
+              ],
       "sortcol": "",
       "manualdata": true,
       "width": 600,
