arreglado problema de agregado de valores en selects

--- a/lodspeakr/components/services/edit/html.template
+++ b/lodspeakr/components/services/edit/html.template
@@ -248,6 +248,7 @@ function loadVisualization(vizConfig){
       datasetEditors[i].init(config);
       datasetEditors[i].setData(d.rows);
       datasetEditors[i].showTable();
+      datasetEditors[i].fillHeaders();
       var options = "";
       $.each(datasetEditors[i].columns, function(j, item){
         var selected = "";
