--- a/lodspeakr/components/types/viz:ChartVisualization/html.template
+++ b/lodspeakr/components/types/viz:ChartVisualization/html.template
@@ -12,8 +12,8 @@
       <div>
         <strong>Parameters</strong>
         <ul>
-         <li><strong>Y axis:</strong> "<span>{{first.params.paramX.value}}</span>"</li>
-         <li><strong>X axis:</strong> "<span>{{first.params.paramY.value}}</span>"</li>
+         <li><strong>X axis:</strong> "<span>{{first.params.paramX.value}}</span>"</li>
+         <li><strong>Y axis:</strong> "<span>{{first.params.paramY.value}}</span>"</li>
         </ul>
       </div>
       {%if first.main.parent.value%}
